# CIS362_HW1

./: main.py  pyproject.toml  q1.ipynb  q2.ipynb
graphs/: Out_16.md  Out_16.txt
