[tool.poetry]
name = "cis362-hw1"
version = "0.1.0"
description = ""
authors = ["Joshua Maitoza <60358495+jmaitoza@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cis362_hw1"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
altair = "^4.2.2"
altair-viewer = "^0.4.0"
debugpy = "^1.6.6"
jupyter = "^1.0.0"
tornado = "^6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
